--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 REACT_APP_ADMIN=http://localhost:8000/api/admin
-REACT_APP_CLIENT=http://localhost:8000/api/client
-REACT_APP_CUSTOMER=http://localhost:8000/api/customer
 REACT_APP_BACKEND_URL=http://localhost:8000/api
+REACT_APP_STORAGE=http://localhost:8000/uploads
