--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.1",
     "pdfjs-dist": "^2.16.105",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-hot-toast": "^2.4.1",
