--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
