--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
