--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_ADMIN=http://localhost:8000/api/admin
-REACT_APP_BACKEND_URL=http://localhost:8000/api
+REACT_APP_BACKEND_URL=https://nimantran-test.firebaseapp.com/api
+# REACT_APP_BACKEND_URL=http://localhost:8000/api
