--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
-REACT_APP_ADMIN=http://localhost:8000/api/admin
-REACT_APP_BACKEND_URL=https://nimantran-test.firebaseapp.com/api
-# REACT_APP_BACKEND_URL=http://localhost:8000/api
+REACT_APP_ADMIN=https://us-central1-nimantran-test.cloudfunctions.net/app/api/admin
+REACT_APP_BACKEND_URL=https://us-central1-nimantran-test.cloudfunctions.net/app/api
+
+# REACT_APP_ADMIN=http://127.0.0.1:5001/nimantran-test/us-central1/app/api/admin
+# REACT_APP_BACKEND_URL=http://127.0.0.1:5001/nimantran-test/us-central1/app/api
+
+# REACT_APP_ADMIN=http://127.0.0.1:8000/api/admin
+# REACT_APP_BACKEND_URL=http://127.0.0.1:8000/api
