--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
+    "papaparse": "^5.4.1",
     "pdfjs-dist": "^2.16.105",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
