--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# REACT_APP_ADMIN=https://us-central1-nimantran-test.cloudfunctions.net/app/api/admin
-# REACT_APP_BACKEND_URL=https://us-central1-nimantran-test.cloudfunctions.net/app/api
+REACT_APP_ADMIN=https://us-central1-nimantran-test.cloudfunctions.net/app/api/admin
+REACT_APP_BACKEND_URL=https://us-central1-nimantran-test.cloudfunctions.net/app/api
 
 # REACT_APP_ADMIN=http://127.0.0.1:5001/nimantran-test/us-central1/app/api/admin
 # REACT_APP_BACKEND_URL=http://127.0.0.1:5001/nimantran-test/us-central1/app/api
