--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
     "firebase": "^10.13.1",
+    "install": "^0.13.0",
+    "jszip": "^3.10.1",
     "loadsh": "^0.0.4",
+    "npm": "^10.8.3",
     "papaparse": "^5.4.1",
     "pdfjs-dist": "^2.16.105",
     "react": "^18.3.1",
