--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.1",
+    "country-state-city": "^3.2.1",
     "firebase": "^10.13.1",
     "install": "^0.13.0",
     "jszip": "^3.10.1",
